<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_SEW_FU_PD_IN" Id="{bb3451b5-dc25-4374-8536-4c8b9f74ad89}">
    <Declaration><![CDATA[TYPE DUT_SEW_FU_PD_IN :
STRUCT
	PD_1_STATUSWORT			:WORD;	(* Ausgangsprozessdatenwort 1 *)
	PD_2_IST_DREHZAHL		:WORD;	(* Ausgangsprozessdatenwort 2 *)
	PD_3_Status				:WORD;	(* Ausgangsprozessdatenwort 3 *)
	PD_4_IST_DREHMOMENT		:WORD;	(* Ausgangsprozessdatenwort 4 *)
	PD_5_IST_STROM			:WORD;	(* Ausgangsprozessdatenwort 5 *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>