<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_SEW_FU_PD_OUT" Id="{ab5c83f0-a977-4377-a435-f50618239566}">
    <Declaration><![CDATA[TYPE DUT_SEW_FU_PD_OUT :
STRUCT
	PD_1_Steuerwort				:WORD;	(* Eingangsprozessdatenwort 1 *)
	PD_2_Solldrehzahl			:WORD;	(* Eingangsprozessdatenwort 2 *)
	PD_3_Sollbeschleunigung		:WORD;	(* Eingangsprozessdatenwort 3 *)
	PD_4_Sollverzoegerung		:WORD;	(* Eingangsprozessdatenwort 4 *)
	PD_5_Digitalausgaenge		:WORD;	(* Eingangsprozessdatenwort 5 *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>